Finalisation de la page membres, responsive fait

--- a/fansite1.html
+++ b/fansite1.html
@@ -26,8 +26,8 @@
                 <ul>
                     <li class="active"><a href="index.html"><img src="./images/home.svg" 
                         alt="logo d'accueil" class="logo"></a></li>
-                    <li><a href="fansite1.html">Blackpink</a></li>
-                    <li><a href="fansite2.html">Les membres du groupe</a></li>
+                    <li><a href="./fansite1.html">Blackpink</a></li>
+                    <li><a href="./blackpink-membres.html">Les membres du groupe</a></li>
                     <li><a href="fansite3.html">Leurs tournées</a></li>
                     <li><a href="contact.html">Galerie</a></li>
                     <!-- <li><a href="fansite1.html">Blackpink</a></li>
@@ -46,9 +46,10 @@
     </header>
     
     <main>
-        <section>
+        
+        <section id="formation_groupe">
             <article>
-                <img src="./images_blackping/blackpink12.jpg" alt="Blackpink kill this love">
+                <img src="./images_blackping/blackpink12.jpg" alt="Les 4 membres du groupe Blackpink">
                 <div class="content">
                     <header><h2>Formation du groupe</h2></header>
                     <p>Suite au succès important de son groupe phare <strong>2NE1</strong>, l'agence <strong>YG Entertainment</strong> annonçait depuis plusieurs années
@@ -81,10 +82,13 @@
                 </div>
             </article>
         </section>
+
         <section>
             <article>
                 <header>
-                    <img src="./images_blackping/trophy.svg" alt="Trophy icon">
+                    <figure>
+                        <img src="./images_blackping/trophy.svg" alt="Trophy icon">
+                    </figure>
                     <h2>
                     Les récompenses
                     </h2>
@@ -188,10 +192,13 @@
             </div>
             </article>
         </section>
+
         <section>
             <article>
                 <header>
-                    <img src="./images_blackping/start.svg" alt="Start icon">
+                    <figure>
+                        <img src="./images_blackping/start.svg" alt="Start icon">
+                    </figure>
                     <h2>Lancement</h2>
                 </header>
                 <p>
