Finalisation des media queries

--- a/fansite1.html
+++ b/fansite1.html
@@ -24,12 +24,10 @@
             </div>
             <div class="nav-link">
                 <ul>
-                    <li class="active"><a href="index.html"><img src="./images/home.svg" 
-                        alt="logo d'accueil" class="logo"></a></li>
-                    <li><a href="./fansite1.html">Blackpink</a></li>
-                    <li><a href="./blackpink-membres.html">Les membres du groupe</a></li>
-                    <li><a href="fansite3.html">Leurs tournées</a></li>
-                    <li><a href="contact.html">Galerie</a></li>
+                    <li class="active"><a href="index.html">Accueil</a></li>
+                    <li><a href="./fansite1.html" class="active" >Blackpink</a></li>
+                    <li><a href="./fansite1-membres.html">Les membres du groupe</a></li>
+                    <li><a href="./fansite1-galerie.html">Galerie</a></li>
                     <!-- <li><a href="fansite1.html">Blackpink</a></li>
                         <li><a href="fansite2.html">EuroMillions</a></li>
                         <li><a href="fansite3.html">La Scaloneta</a></li>
@@ -121,34 +119,11 @@
                     <li>APAN Music Awards : Best Group (Female) (Global)</li>
                     <li>Asian Pop Music Awards : Best Album (Overseas) "The Album"</li>
                     <li>Asian Pop Music Awards : Best Group (Overseas)</li>
-                    <li>iHeartRadio Music Award : Favourite Music Video Choreography "Kill This Love"</li>
-                    <li>Spotify Awards : Most Listened K-pop Artist (Female)</li>
-                    <li>Variety's Hitmakers Awards : Group of the Year</li>
-                    <li>Joox Thailand Music Awards : K-Pop Artist of the Year</li>
-                    <li>Mnet Asian Music Awards : Worldwide Fans' Choice Top 10</li>
-                    <li>Mnet Asian Music Awards : Best Female Group</li>
-                    <li>Mnet Asian Music Awards : Best Dance Performance Female Group</li>
-                    <li>Melon Music Awards : Top 10</li>
-                    <li>Melon Music Awards : Best Female Dance</li>
                     <li>Boom Boom Award : Most Popular Overseas Group Of The Year</li>
                     <li>Vidéo Music Awards : Song Of Summer "How You Like That"</li>
                 </ul>
                 <h3>2019</h3>
                 <ul>
-                    <li>Tencent Music Entertainment Awards : Best Japanese And Korean Artist Of The Year</li>
-                    <li>Mnet Asian Music Awards : Worldwide Fans' Choice Top 10</li>
-                    <li>E! People's Choice Awards : The Concert Tour Of 2019 "BLACKPINK 2019 WORLD"</li>
-                    <li>E! People's Choice Awards : The Music Video Of 2019 "Kill This Love"</li>
-                    <li>E! People's Choice Awards : The Group Of 2019</li>
-                    <li>V LIVE Awards V HEARTBEAT : Global Top 12</li>
-                    <li>BreakTudo Awards : K-Pop Female Group</li>
-                    <li>BreakTudo Awards : Collaboration Of The Year "Kiss And Make Up"</li>
-                    <li>BreakTudo Awards : Boom Video Of The Year "Kill This Love"</li>
-                    <li>BreakTudo Awards : International Music Video Of The Year "Kill This Love"</li>
-                    <li>Teen Choice Awards : Choice Song Group "DDU-DU DDU-DU"</li>
-                    <li>14th Annual Soompi Awards : Best Female Group</li>
-                    <li>Shorty Awards : Best In Music</li>
-                    <li>Gaon Chart K-Pop Awards : Song Of The Year (June) "DDU-DU DDU-DU"</li>
                     <li>Global V LIVE Awards : Global Artist Top 10</li>
                     <li>Golden Disc Awards : Cosmopolitan Artist Award</li>
                     <li>Golden Disc Awards : Digital Bonsang "DDU-DU DDU-DU"</li>
@@ -156,9 +131,6 @@
                 <h3>2018</h3>
                 <ul>
                     <li>Instagram Awards : #1 Girl Group</li>
-                    <li>Mnet Asian Music Awards : Worldwide Fans' Choice Top 10</li>
-                    <li>MelOn Music Awards : Best Female Dance "DDU-DU DDU-DU"</li>
-                    <li>MelOn Music Awards : Top 10 Artists</li>
                     <li>ELLE Style Awards : K-Style ICON</li>
                     <li>MTV Video Music Awards Japan : Best Dance Video "DDU-DU DDU-DU"</li>
                     <li>YouTube Awards : Diamond Creator Award</li>
@@ -166,28 +138,15 @@
                     <li>Seoul Music Awards : Bonsang Award</li>
                     <li>Global V LIVE Awards : Global Artist Top 10</li>
                     <li>Golden Disc Awards : Digital Bonsang "AS IF IT'S YOUR LAST"</li>
-                    <li>Gaon Chart K-Pop Awards : World Rookie Award</li>
                 </ul>
                 <h3>2017</h3>
                 <ul>
-                    <li>BOF Awards : Style Icon Award</li>
-                    <li>12th Annual Soompi Awards : Rookie Of The Year</li>
                     <li>Gaon Chart K-Pop Awards : Song Of The Year (November) "PLAYING WITH FIRE"</li>
                     <li>Gaon Chart K-Pop Awards : Song Of The Year (August) "WHISTLE"</li>
                     <li>Gaon Chart K-Pop Awards : New Artist Of The Year</li>
                     <li>Global V LIVE Awards : Global Rookie Top 5</li>
                     <li>Seoul Music Awards : New Artist Award</li>
                     <li>Golden Disc Awards : Rookie Of The Year</li>
-                </ul>
-                <h3>2016</h3>
-                <ul>
-                    <li>Hallyu K Fans' Choice Awards : Rookie Of The Year</li>
-                    <li>Hallyu K Fans' Choice Awards : Best Girl Group</li>
-                    <li>KpopStarz Awards : Best K-Pop Rookie Group Of The Year</li>
-                    <li>Mnet Asian Music Awards : Best Music Video "WHISTLE"</li>
-                    <li>Mnet Asian Music Awards : Best Of Next</li>
-                    <li>MelOn Music Awards : New Artist Of The Year</li>
-                    <li>Asia Artist Awards : Rookie Of The Year</li>
                 </ul>
             </div>
             </article>
@@ -247,10 +206,9 @@
             <article class="menuBlackpink">
                 <h2>Blackpink</h2>
                 <ul>
-                    <li>Accueil</li>
-                    <li>Lien 1</li>
-                    <li>Lien 2</li>
-                    <li>Lien 3</li>
+                    <li><a href="./fansite1.html">Histoire</a></li>
+                    <li><a href="./fansite1-membres.html">Les membres</a></li>
+                    <li><a href="./fansite1-galerie.html">La galerie</a></li>
                 </ul>
             </article>
             <article class="menuEuroMillions">
@@ -264,12 +222,12 @@
             </article>
             <article class="menuScaloneta">
                 <h2>La Scaloneta</h2>
-                <ul>
-                    <li>Accueil</li>
-                    <li>Lien 1</li>
-                    <li>Lien 2</li>
-                    <li>Lien 3</li>
-                </ul>
+                    <ul>
+                        <li><a href="fansite3.html">Accueil</a></li>
+                        <li><a href="histoire.html">Un peu d'histoire</a></li>
+                        <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
+                        <li><a href="phenomene.html">Le phénomène social</a></li>
+                    </ul>
             </article>
         </section>
         <p class="copyright">Limonade © 2024 - Tous droits réservés.</p>
