Ajout des liens du footer pour la section Blackpink

--- a/index.html
+++ b/index.html
@@ -144,12 +144,11 @@
                 </article>
                 <article class="menuBlackpink">
                     <h2>Blackpink</h2>
-                    <ul>
-                        <li><a href="fansite1.html">Accueil</a></li>
-                        <li><a href="">Lien 1</a></li>
-                        <li><a href="">Lien 2</a></li>
-                        <li><a href="">Lien 3</a></li>
-                    </ul>
+                        <ul>
+                            <li><a href="./fansite1.html">Histoire</a></li>
+                            <li><a href="./fansite1-membres.html">Les membres</a></li>
+                            <li><a href="./fansite1-galerie.html">La galerie</a></li>
+                        </ul>
                 </article>
                 <article class="menuEuroMillions">
                     <h2>EuroMillions</h2>
