Ajout des liens du footer, en attendante des liens de fansite2

--- a/fansite1-galerie.html
+++ b/fansite1-galerie.html
@@ -28,10 +28,7 @@
                         <li><a href="./fansite1.html">Blackpink</a></li>
                         <li><a href="./fansite1-membres.html">Les membres du groupe</a></li>
                         <li><a href="./fansite1-galerie.html" class="active">Galerie</a></li>
-                        <!-- <li><a href="fansite1.html">Blackpink</a></li>
-                            <li><a href="fansite2.html">EuroMillions</a></li>
-                            <li><a href="fansite3.html">La Scaloneta</a></li>
-                            <li><a href="contact.html">Contact</a></li> -->
+
                     </ul>
                 </div>
                     <div class="responsive">
@@ -107,13 +104,13 @@
     <footer>
         <section class="planSite">
             <article class="menuFooter">
-                <h2>Bienvenue</h2>
-                <ul>
-                    <li>Blackpink</li>
-                    <li>EuroMillions</li>
-                    <li>La Scaloneta</li>
-                    <li>Contact</li>
-                </ul>
+                <h2><a href="index.html">Bienvenue</a></h2>
+                    <ul>
+                        <li><a href="fansite1.html">Blackpink</a></li>
+                        <li><a href="fansite2.html">EuroMillions</a></li>
+                        <li><a href="fansite3.html">La Scaloneta</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
             </article>            
             <article class="menuBlackpink">
                 <h2>Blackpink</h2>
