--- a/fansite1.html
+++ b/fansite1.html
@@ -28,10 +28,6 @@
                     <li><a href="./fansite1.html" class="active" >Blackpink</a></li>
                     <li><a href="./fansite1-membres.html">Les membres du groupe</a></li>
                     <li><a href="./fansite1-galerie.html">Galerie</a></li>
-                    <!-- <li><a href="fansite1.html">Blackpink</a></li>
-                        <li><a href="fansite2.html">EuroMillions</a></li>
-                        <li><a href="fansite3.html">La Scaloneta</a></li>
-                        <li><a href="contact.html">Contact</a></li> -->
                 </ul>
             </div>
                 <div class="responsive">
@@ -195,13 +191,13 @@
     <footer>
         <section class="planSite">
             <article class="menuFooter">
-                <h2>Bienvenue</h2>
-                <ul>
-                    <li>Blackpink</li>
-                    <li>EuroMillions</li>
-                    <li>La Scaloneta</li>
-                    <li>Contact</li>
-                </ul>
+                <h2><a href="index.html">Bienvenue</a></h2>
+                    <ul>
+                        <li><a href="fansite1.html">Blackpink</a></li>
+                        <li><a href="fansite2.html">EuroMillions</a></li>
+                        <li><a href="fansite3.html">La Scaloneta</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
             </article>
             <article class="menuBlackpink">
                 <h2>Blackpink</h2>
