Ajout de la brève description de blackpink et des liens correspondant

--- a/index.html
+++ b/index.html
@@ -53,21 +53,22 @@
                     <div class="bordure-decalee"><img src="./images/blackpink3.jpg" alt="Photo du groupe Blackpink"></div>
                     <div class="contenu">
                         <h2>Blackpink</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
-                            Fusce ac egestas sapien. Phasellus in lorem ac turpis laoreet
-                            consectetur quis suscipit orci. Pellentesque consequat vulputate ligula,
+                        <p><strong>Blackpink (BLΛƆKPIИK ou 블랙핑크)</strong>, est un girl group sud-coréen formé en 2016 par <strong>YG Entertainment2</strong>.
+                            C'est le deuxième groupe féminin à débuter, après 2NE1, au sein de la YG Entertainment3.
+                            Le groupe est composé de quatre membres se prénommant Jennie, Lisa, Jisoo et Rosé.
+                            Elles forment un groupe multinational, venant de Nouvelle Zélande, de Thaïlande et de Corée du Sud.
                         </p>
                         <p>
-                            vitae fringilla nisl. Suspendisse aliquet arcu et nisi rhoncus consectetur.
-                            Phasellus viverra quam ut pretium volutpat. Etiam felis nulla, tincidunt
-                            eget molestie id, finibus eu orci. Fusce fermentum ullamcorper purus non suscipit.
+                            Blackpink est le groupe de K-pop féminin le plus haut-classé sur le Billboard Hot 100 et le Billboard 200,
+                            culminant respectivement à la treizième place (avec Ice Cream sortie en 2020) et à la première place
+                            (avec BORN PINK sortie en 2022). Elles sont également le premier et le seul groupe féminin de K-pop
+                            à entrer dans le classement du Billboard's Emerging Artists et à le culminer, et le premier groupe
+                            féminin de K-pop à avoir quatre singles numéro un sur le classement du Billboard's World Digital Song Sales.
                         </p>
                         <div class="lien">
-                            <button type="button"><a href="#">Lien 1</a></button>
-                            <button type="button"><a href="#">Lien 2</a></button>
-                            <button type="button"><a href="#">Lien 3</a></button>
+                            <button type="button"><a href="./fansite1.html">Histoire</a></button>
+                            <button type="button"><a href="./fansite1-membres.html">Les membres</a></button>
+                            <button type="button"><a href="./fansite1-galerie.html">Galerie</a></button>
                         </div>
                     </div>
                 </article>
