finalisation du css de la page contact, ajout de la description de limonade dans index

--- a/index.html
+++ b/index.html
@@ -44,9 +44,8 @@
                         <h1>Limonade</h1>
                         <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. Nous allons
                             vous présenter briévement nos trois sujets sur cette page.</p>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                            Integer lectus nisl, hendrerit eu ornare et, mollis ut tellus.
-                            Vivamus nec mauris id nisl tincidunt suscipit id vel eros.
+                        <p>Le nom de notre fansite est LIMONADE, ce mot utilise toutes les lettres sauf le V faisant presque de celui-ci un anagramme de nos prénoms.
+                            Nous avons utilisé Trello pour nous répartir les tâches et git/github pour partager notre travail.
                         </p>
                     </header>
                 <article class="blackpink">
@@ -54,7 +53,7 @@
                     <div class="contenu">
                         <h2>Blackpink</h2>
                         <p><strong>Blackpink (BLΛƆKPIИK ou 블랙핑크)</strong>, est un girl group sud-coréen formé en 2016 par <strong>YG Entertainment2</strong>.
-                            C'est le deuxième groupe féminin à débuter, après 2NE1, au sein de la YG Entertainment3.
+                            C'est le deuxième groupe féminin à débuter, après 2NE1, au sein de la YG Entertainment.
                             Le groupe est composé de quatre membres se prénommant Jennie, Lisa, Jisoo et Rosé.
                             Elles forment un groupe multinational, venant de Nouvelle Zélande, de Thaïlande et de Corée du Sud.
                         </p>
