correction du menu Blackpink , rajout des réseaux de Lisa sur la page membre

--- a/fansite1-membres.html
+++ b/fansite1-membres.html
@@ -195,7 +195,8 @@
                         <p>
                             Lisa explique que les autres membres de Blackpink ont pris soin d’elle et lui ont enseigné la langue coréenne.
                         </p>
-                        <div class="reseaux">
+                        <h3>Ses réseaux</h3>
+                        <div class="reseaux">                            
                             <a href="https://x.com/blackpink_lisa"><img src="./images_blackping/twitter.svg" alt="twitter de Lisa"></a>
                             <a href="https://www.instagram.com/lalalalisa_m"><img src="./images_blackping/instagram.svg" alt="instagram de Lisa"></a>
                             <a href="https://www.youtube.com/channel/UC35HKvKYPkri4Grd5KXl3wQ?app=desktop"><img src="./images_blackping/youtube.svg" alt="youtube de Lisa"></a>
