Suppression des images en trop, correction sur les pages du fansite Blackpink

--- a/fansite1.html
+++ b/fansite1.html
@@ -13,7 +13,6 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Marck+Script&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poiret+One&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap" rel="stylesheet">
-
     </head>
 <body>
     <header class="headerNavbar">
@@ -26,8 +25,9 @@
                 <ul>
                     <li class="active"><a href="index.html">Accueil</a></li>
                     <li><a href="./fansite1.html" class="active" >Blackpink</a></li>
-                    <li><a href="./fansite1-membres.html">Les membres du groupe</a></li>
-                    <li><a href="./fansite1-galerie.html">Galerie</a></li>
+                    <li><a href="./fansite1-membres.html">Les membres</a></li>
+                    <li><a href="./fansite1-galerie.html">La galerie</a></li>
+                    <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
                 <div class="responsive">
@@ -43,7 +43,7 @@
         
         <section id="formation_groupe">
             <article>
-                <img src="./images_blackping/blackpink12.jpg" alt="Les 4 membres du groupe Blackpink">
+                <img src="./images_blackpink/blackpink12.jpg" alt="Les 4 membres du groupe Blackpink">
                 <div class="content">
                     <header><h2>Formation du groupe</h2></header>
                     <p>Suite au succès important de son groupe phare <strong>2NE1</strong>, l'agence <strong>YG Entertainment</strong> annonçait depuis plusieurs années
@@ -81,7 +81,7 @@
             <article>
                 <header>
                     <figure>
-                        <img src="./images_blackping/trophy.svg" alt="Trophy icon">
+                        <img src="./images_blackpink/trophy.svg" alt="Trophy icon">
                     </figure>
                     <h2>
                     Les récompenses
@@ -152,7 +152,7 @@
             <article>
                 <header>
                     <figure>
-                        <img src="./images_blackping/start.svg" alt="Start icon">
+                        <img src="./images_blackpink/start.svg" alt="Start icon">
                     </figure>
                     <h2>Lancement</h2>
                 </header>
