--- a/fansite1-membres.html
+++ b/fansite1-membres.html
@@ -26,8 +26,9 @@
                     <ul>
                         <li class="active"><a href="index.html">Accueil</a></li>
                         <li><a href="./fansite1.html">Blackpink</a></li>
-                        <li><a href="./fansite1-membres.html" class="active">Les membres du groupe</a></li>
-                        <li><a href="./fansite1-galerie.html">Galerie</a></li>
+                        <li><a href="./fansite1-membres.html" class="active">Les membres</a></li>
+                        <li><a href="./fansite1-galerie.html">La galerie</a></li>
+                        <li><a href="contact.html">Contact</a></li>
                     </ul>
                 </div>
                     <div class="responsive">
@@ -44,28 +45,28 @@
 
                 <article>
                     <figure>
-                        <img src="./images_blackping/jennie.jpg" alt="Photo de Jennie">
+                        <img src="./images_blackpink/jennie.jpg" alt="Photo de Jennie">
                         <figcaption><a href="#Jennie">Jennie</a>
                     </figure>
                 </article>
 
                 <article>
                     <figure>
-                        <img src="./images_blackping/rose.jpg" alt="Photo de Rosé">
+                        <img src="./images_blackpink/rose.jpg" alt="Photo de Rosé">
                         <figcaption><a href="#Rose">Rosé</a></figcaption>
                     </figure>
                 </article>
 
                 <article>
                     <figure>
-                        <img src="./images_blackping/jisoo.jpg" alt="Photo de Jisoo">
+                        <img src="./images_blackpink/jisoo.jpg" alt="Photo de Jisoo">
                         <figcaption><a href="#Jisoo">Jisoo</a></figcaption>
                     </figure>
                 </article>
 
                 <article>
                     <figure>
-                        <img src="./images_blackping/Lisa.jpg" alt="Photo de Lisa">
+                        <img src="./images_blackpink/lisa.jpg" alt="Photo de Lisa">
                         <figcaption><a href="#Lisa">Lisa</a></figcaption>
                     </figure>
                 </article>
@@ -75,7 +76,7 @@
                     <article>
                         <header>
                             <figure>
-                                <img src="./images_blackping/hot.svg" alt="Hot icon">
+                                <img src="./images_blackpink/hot.svg" alt="Hot icon">
                             </figure>
                             <h2 id="Jennie">Jennie : La rappeuse du groupe</h2>
                         </header>
@@ -94,9 +95,9 @@
                         </p>
                         <h3>Ses réseaux</h3>
                         <div class="reseaux">
-                            <a href="https://x.com/jennierubyjane"><img src="./images_blackping/twitter.svg" alt="twitter de Jennie"></a>
-                            <a href="https://www.instagram.com/jennierubyjane/"><img src="./images_blackping/instagram.svg" alt="instagram de Jennie"></a>
-                            <a href="https://www.youtube.com/@jennierubyjane"><img src="./images_blackping/youtube.svg" alt="youtube de Jennie"></a>
+                            <a href="https://x.com/jennierubyjane"><img src="./images_blackpink/twitter.svg" alt="twitter de Jennie"></a>
+                            <a href="https://www.instagram.com/jennierubyjane/"><img src="./images_blackpink/instagram.svg" alt="instagram de Jennie"></a>
+                            <a href="https://www.youtube.com/@jennierubyjane"><img src="./images_blackpink/youtube.svg" alt="youtube de Jennie"></a>
                         </div>
                     </article>
                 </section>
@@ -105,7 +106,7 @@
                     <article>
                         <header>
                             <figure>
-                                <img src="./images_blackping/voice.svg" alt="Voice icon">
+                                <img src="./images_blackpink/voice.svg" alt="Voice icon">
                             </figure>
                             <h2 id="Rose">Rosé : la voix du groupe</h2>
                         </header>
@@ -129,10 +130,10 @@
                         </p>
                         <h3>Ses réseaux</h3>
                         <div class="reseaux">
-                            <a href="https://x.com/numberonehq"><img src="./images_blackping/twitter.svg" alt="twitter de Rosé"></a>
-                            <a href="https://www.instagram.com/roses_are_rosie/"><img src="./images_blackping/instagram.svg" alt="instagram de Rosé"></a>
-                            <a href="https://www.youtube.com/channel/UCBo1hnzxV9rz3WVsv__Rn1g"><img src="./images_blackping/youtube.svg" alt="youtube de Rosé"></a>
-                            <a href="https://www.tiktok.com/@roses_are_rosie"><img src="./images_blackping/tiktok.svg" alt="tiktok de Rosé"></a>
+                            <a href="https://x.com/numberonehq"><img src="./images_blackpink/twitter.svg" alt="twitter de Rosé"></a>
+                            <a href="https://www.instagram.com/roses_are_rosie/"><img src="./images_blackpink/instagram.svg" alt="instagram de Rosé"></a>
+                            <a href="https://www.youtube.com/channel/UCBo1hnzxV9rz3WVsv__Rn1g"><img src="./images_blackpink/youtube.svg" alt="youtube de Rosé"></a>
+                            <a href="https://www.tiktok.com/@roses_are_rosie"><img src="./images_blackpink/tiktok.svg" alt="tiktok de Rosé"></a>
                         </div>
                     </article>
                 </section>
@@ -141,7 +142,7 @@
                     <article>
                         <header>
                             <figure>
-                                <img src="./images_blackping/cosmetic.svg" alt="Beauty icon">
+                                <img src="./images_blackpink/cosmetic.svg" alt="Beauty icon">
                             </figure>
                             <h2 id="Jisoo">Jisoo : le visage du groupe</h2>
                         </header>
@@ -167,9 +168,9 @@
                         </p>
                         <h3>Ses réseaux</h3>
                         <div class="reseaux">
-                            <a href="https://x.com/sooyyaaa_"><img src="./images_blackping/twitter.svg" alt="twitter de Jisoo"></a>
-                            <a href="https://www.instagram.com/sooyaaa__/"><img src="./images_blackping/instagram.svg" alt="instagram de Jisoo"></a>
-                            <a href="https://www.youtube.com/watch?v=YudHcBIxlYw"><img src="./images_blackping/youtube.svg" alt="youtube de Jisoo"></a>
+                            <a href="https://x.com/sooyyaaa_"><img src="./images_blackpink/twitter.svg" alt="twitter de Jisoo"></a>
+                            <a href="https://www.instagram.com/sooyaaa__/"><img src="./images_blackpink/instagram.svg" alt="instagram de Jisoo"></a>
+                            <a href="https://www.youtube.com/watch?v=YudHcBIxlYw"><img src="./images_blackpink/youtube.svg" alt="youtube de Jisoo"></a>
                         </div>
                     </article>
                 </section>
@@ -178,7 +179,7 @@
                     <article>
                         <header>
                             <figure>
-                                <img src="./images_blackping/disco.svg" alt="Disco icon">
+                                <img src="./images_blackpink/disco.svg" alt="Disco icon">
                             </figure>
                             <h2 id="Lisa">Lisa : la danceuse du groupe</h2>
                         </header>
@@ -197,10 +198,10 @@
                         </p>
                         <h3>Ses réseaux</h3>
                         <div class="reseaux">                            
-                            <a href="https://x.com/blackpink_lisa"><img src="./images_blackping/twitter.svg" alt="twitter de Lisa"></a>
-                            <a href="https://www.instagram.com/lalalalisa_m"><img src="./images_blackping/instagram.svg" alt="instagram de Lisa"></a>
-                            <a href="https://www.youtube.com/channel/UC35HKvKYPkri4Grd5KXl3wQ?app=desktop"><img src="./images_blackping/youtube.svg" alt="youtube de Lisa"></a>
-                            <a href="https://www.tiktok.com/@lalalalisa_m"><img src="./images_blackping/tiktok.svg" alt="tiktok de Lisa"></a>
+                            <a href="https://x.com/blackpink_lisa"><img src="./images_blackpink/twitter.svg" alt="twitter de Lisa"></a>
+                            <a href="https://www.instagram.com/lalalalisa_m"><img src="./images_blackpink/instagram.svg" alt="instagram de Lisa"></a>
+                            <a href="https://www.youtube.com/channel/UC35HKvKYPkri4Grd5KXl3wQ?app=desktop"><img src="./images_blackpink/youtube.svg" alt="youtube de Lisa"></a>
+                            <a href="https://www.tiktok.com/@lalalalisa_m"><img src="./images_blackpink/tiktok.svg" alt="tiktok de Lisa"></a>
                         </div>
                     </article>
                 </section>
