modification de la couleur du lien dans contact et correction de la description de limonade dans index

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                         <h1>Limonade</h1>
                         <p>Bienvenue sur le fansite d'<span class="blackpink">Adeline</span>, <span class="euro">Maeva</span> et <span class="Scaloneta">Noa</span>. Nous allons
                             vous présenter briévement nos trois sujets sur cette page.</p>
-                        <p>Le nom de notre fansite est LIMONADE, ce mot utilise toutes les lettres sauf le V faisant presque de celui-ci un anagramme de nos prénoms.
+                        <p>Le nom de notre fansite est LIMONADE, ce mot utilise toutes les lettres de nos prénoms sauf le V.
                             Nous avons utilisé Trello pour nous répartir les tâches et git/github pour partager notre travail.
                         </p>
                     </header>
