--- a/fansite3.html
+++ b/fansite3.html
@@ -32,7 +32,6 @@
                       <li><a href="histoire.html">Un peu d'histoire</a></li>
                       <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                       <li><a href="phenomene.html">Le phénomène social</a></li>
-                      <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </div>
             </nav>
@@ -63,7 +62,8 @@
                             option pour prolonger son contrat jusqu'à la Copa América 2020.
                         </p>
                     </a></div>
-                    <img src="./Images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" class="mobile">
+                    <img src="./Images/scaloneta.webp" alt="Image du bus de l'équipe d'Argentine" 
+                    class="mobile">
                 </article>
 
                 <article class="worldcup">
@@ -92,31 +92,27 @@
                     <img src="./Images/bus5.webp" alt="Les champions du monde dans le bus">
                     <div class="text"><a href="phenomene.html">
                         <h2>Le phénomène social</h2>
-                        <p>Quatre millions d'Argentins pour célébrer Messi et sa bande et c'est la 
-                            folie totale.
-                            Entre l’arrivée des champions du monde à l’aéroport d’Ezeiza deux jours 
-                            après la finale et la célébration du titre dans ses rues, Buenos Aires a 
-                            vécu une journée absolument démentielle.
+                        <p>Depuis le dernier penalty victorieux de Montiel, une surenchère de chansons, 
+                            pétards, tambours, cornes de brume, klaxons, se disputent sans fin 
+                            l’espace sonore de la capitale. Et sans même attendre que Lionel Messi 
+                            soulève la Coupe à Doha, par milliers, dizaines de milliers, très vite 
+                            davantage, toute une métropole a convergé vers l’Obélisque, monument 
+                            emblématique du centre de la capitale et lieu traditionnel des 
+                            célébrations sportives. Tous ont voulu être là, vivre ce moment tant 
+                            rêvé, attendu depuis 36 ans.
+                            Ce mardi 20 décembre est jour férié en Argentine. Le pays célèbre ses 
+                            champions du monde, et notamment Lionel Messi, le capitaine de l'équipe 
+                            nationale devenu héros de tout un pays. La sélection est rentrée à Buenos 
+                            Aires, de retour du Qatar. Quatre millions d'Argentins sont là pour 
+                            accueillir Messi et sa bande, c'est la folie totale. Entre l’arrivée 
+                            des champions du monde à l’aéroport d’Ezeiza deux jours après la finale 
+                            et la célébration du titre dans ses rues, Buenos Aires a vécu une 
+                            journée absolument démentielle. Tellement démentielle que la Scaloneta 
+                            à dû être évacuée en hélicoptère.
                         </p>
                     </a></div>
-                    <img src="./Images/messi.webp" alt="Messi embrassant la coupe du monde" class="mobile">
-                </article>
-
-                <article class="avenir">
-                    <img src="./Images/finalissima_25.jpeg" alt="Affiche de la Finalissima 2025">
-                    <div class="text"><a href="avenir.html">
-                        <h2>A venir</h2>
-                        <p>L'Espagne et l'Argentine devraient se rencontrer lors de l'édition 2025 
-                            de la Finalissima, qui verra les vainqueurs de l'Euro 2024 affronter 
-                            les champions de la Copa America.
-                            L'Argentine prend le large en tête des qualifications sud-américaines 
-                            pour le Mondial 2026, tandis que le Brésil échoue encore à convaincre 
-                            en arrachant le nul contre l'Uruguay mardi. Un succès qui permet également 
-                            aux champions du monde en titre de conserver leur première place au 
-                            classement FIFA.
-                        </p>
-                    </a></div>
-                    <img src="./Images/eliminatorias_26.jpg" alt="Affiche des éliminatoires de la coupe du monde 2026" class="mobile">
+                    <img src="./Images/evacuacion.jpg" alt="La Scaloneta, évacuée par hélicoptère" 
+                    class="mobile">
                 </article>
 
             </section>
@@ -130,14 +126,13 @@
                 <article class="menuFooter">
                     <div class="titre">
                         <img src="./Images/limonade.svg" alt="logo de Limonade" class="logo">
-                        <h2><a href="index.html">Limonade</a></h2>
+                        <h2 class="limonade"><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
-                        <li><a href="index.html">Bienvenue</a></li>
-                        <li><a href="fansite1.html">Blackpink</a></li>
-                        <li><a href="fansite2.html">EuroMillions</a></li>
+                        <li class="blackpink"><a href="fansite1.html">Blackpink</a></li>
+                        <li class="euromillions"><a href="fansite2.html">EuroMillions</a></li>
                         <li><a href="fansite3.html">La Scaloneta</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="limonade"><a href="contact.html">Contact</a></li>
                     </ul>
                 </article>
 
@@ -151,7 +146,6 @@
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
-                        <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </article>
 
