--- a/histoire.html
+++ b/histoire.html
@@ -32,7 +32,6 @@
                       <li class="active"><a href="histoire.html">Un peu d'histoire</a></li>
                       <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                       <li><a href="phenomene.html">Le phénomène social</a></li>
-                      <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </div>
             </nav>
@@ -156,9 +155,9 @@
 
                 <article class="finalissima">
                     <h2>Finalíssima 2022</h2>
-                    <p><img src="./Images/finalissima.avif" 
+                    <img src="./Images/finalissima.avif" 
                         alt="L'équipe d'Argentine avec le trophée de la Finalíssima" class="center">
-                        L'équipe s'est préparée à jouer la Finalíssima contre l'équipe italienne, 
+                    <p>L'équipe s'est préparée à jouer la Finalíssima contre l'équipe italienne, 
                         tous deux champions de leurs tournois continentaux respectifs. 
                         Le match avait également une énorme valeur symbolique, puisque le regretté Diego 
                         Maradona a joué dans les deux pays, en plus de se dérouler sur le territoire 
@@ -214,9 +213,9 @@
 
                 <article class="america24">
                     <h2>Copa América 2024</h2>
-                    <p><img src="./Images/copa_america24.jpg" 
+                    <img src="./Images/copa_america24.jpg" 
                         alt="L'Argentine championne de la Copa América en 2024" class="center">
-                        L'équipe argentine a commencé sa participation à la Copa América 2024 
+                    <p>L'équipe argentine a commencé sa participation à la Copa América 2024 
                         organisée aux États-Unis en tant que championne en titre. L'équipe de 
                         Scaloni a remporté son groupe (Groupe A) qu'elle partageait avec le Canada, 
                         le Chili et le Pérou, avec un rythme parfait avec 3 victoires.</p>
@@ -258,7 +257,6 @@
                         <h2><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
-                        <li><a href="index.html">Bienvenue</a></li>
                         <li><a href="fansite1.html">Blackpink</a></li>
                         <li><a href="fansite2.html">EuroMillions</a></li>
                         <li><a href="fansite3.html">La Scaloneta</a></li>
@@ -276,7 +274,6 @@
                         <li><a href="histoire.html">Un peu d'histoire</a></li>
                         <li><a href="worldcup.html">FIFA World Cup 2022</a></li>
                         <li><a href="phenomene.html">Le phénomène social</a></li>
-                        <li><a href="avenir.html">A venir</a></li>
                     </ul>
                 </article>
 
