--- a/phenomene.html
+++ b/phenomene.html
@@ -248,13 +248,13 @@
                 <article class="menuFooter">
                     <div class="titre">
                         <img src="./Images/limonade.svg" alt="logo de Limonade" class="logo">
-                        <h2><a href="index.html">Limonade</a></h2>
+                        <h2 class="limonade"><a href="index.html">Limonade</a></h2>
                     </div>
                     <ul>
-                        <li><a href="fansite1.html">Blackpink</a></li>
-                        <li><a href="fansite2.html">EuroMillions</a></li>
+                        <li class="blackpink"><a href="fansite1.html">Blackpink</a></li>
+                        <li class="euromillions"><a href="fansite2.html">EuroMillions</a></li>
                         <li><a href="fansite3.html">La Scaloneta</a></li>
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="limonade"><a href="contact.html">Contact</a></li>
                     </ul>
                 </article>
 
